@@ -175,6 +175,7 @@ class CircusParser(object):
                           ['merging', 'time_rpv', 'float', '5'],
                           ['merging', 'rpv_threshold', 'float', '0.02'],
                           ['merging', 'min_spikes', 'int', '20'],
+                          ['merging', 'clean_merging', 'bool', 'False'],
                           ['converting', 'export_pcs', 'string', 'prompt'],
                           ['converting', 'erase_all', 'bool', 'True'],
                           ['converting', 'export_all', 'bool', 'False'],
